assets/css/main.css
/* ... */
/* Custom CSS */

	.logo {
		position: absolute;
		top: 10px;
		width: 40px;
		filter: invert();
	}
	
	#header nav ul {
		padding: 4px 0;
	}

	section#banner {
		height: 100vh;
	}
	
	section#banner .inner {
		border-radius: 1em;
	}

	header.special.container, section.special.container, section.special-alt.container {
		display: none;
	}

	article#main {
		background-color: white;
	}

	#detail-section {
		border-radius: 50px;
		text-align: center;
		margin: 0 auto;
		max-width: 700px;
	}

	.details-container {
		text-align: center;
		width: fit-content;
		margin: 0 auto;
	}

	#save-the-date {
		margin-top: 4em;
		width: 80vh;
	}

	.details {
		display: grid;
		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
		justify-content: space-evenly;
		margin-top: 2em;
		align-items: center;
	}

	.animation {
		background-repeat: no-repeat;
		border-radius: 50%;
		justify-self: center;
		height: 300px;
		width: 300px;
	}
	#first-animation {
		background-image: url("../../images/smiles.gif");
		background-size: cover;
		background-position: center;
	}
	#second-animation {
		background-image: url("../../images/brick-walkway.gif");
		background-size: 250%;
		background-position: 54% 30%;
	}

	.info {
		text-align: center;
		margin: 2em 2em 0 2em;
	}
	.info h2 {
		font-size: 40px;
		font-weight: 400;
		margin-bottom: 1rem;
	}
	.info h3 {
		font-size: 30px;
		font-weight: 400;
		text-transform: none;
	}
	.info p {
		font-size: 25px;
	}


	.reg-container h1 {
		font-size: 30px;
		margin-bottom: 2em;
	}
	.registries {
		display: flex;
		flex: 1;
		flex-wrap: wrap;
		justify-content: space-evenly;
		list-style: none;
		margin: 0;
		padding: 0;
	}
	.registries li {
		background-color: white;
		background-position: center;
		background-repeat: no-repeat;
		border-radius: 50%;
		padding: 1em;
		margin: 1em;
		width: 30vmin;
		height: 30vmin;
		transition: 250ms ease-in-out;
		transition-property: transform;
	}
	.registries #reg-1 {
		background-image: url("../../images/registry-pictures/williams-sonoma.png");
		background-size: 110%;
	}
	.registries #reg-2 {
		background-image: url("../../images/registry-pictures/bed-bath-and-beyond.png");
		background-size: 130%;
	}
	.registries #reg-3 {
		background-image: url("../../images/registry-pictures/anthropology-logo.png");
		background-size: 140%;
	}
	.registries li:hover {
		transform: scale(1.2);
		cursor: pointer;
	}


	ul.icons {
		display: none;
	}
	footer#footer {
		margin: 0;
		padding: 2em;
	}

	@media only screen and (max-width: 1000px) {
		
		#save-the-date {
			width: 80%;
			margin-bottom: 1em;
		}
	}

	@media only screen and (max-width: 736px) {
		.details {
			margin-top: 0;
		}
		
		#header {
			padding: 1em;
		}

		.registries li {
			width: 200px;
			height: 200px;
		}

		.info h2 {
			font-size: 30px;
		}
		.info h3 {
			font-size: 25px;
		}
		.info p {
			font-size: 20px;
		}
	  }

	  @media only screen and (max-width: 331px) {
		#header {
			height: 90px;
		}
	  }
	  @media only screen and (max-width: 213px) {
		#header {
			height: 120px;
		}
	  }

	  @media only screen and (min-width: 980px) {
		  #header nav {
			  right: 1.5em;
		  }
	  }

